--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "puzzle-03"
+name = "puzzle-04"
 version = "0.1.0"
 authors = ["Chris Butler <chrisbutler296@gmail.com>"]
 edition = "2018"
@@ -8,3 +8,5 @@ edition = "2018"
 failure = "*"
 strsim = "*"
 itertools = "*"
+regex = "1"
+lazy_static = "*"
