--- a/puzzle-16/Cargo.toml
+++ b/puzzle-16/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2018"
 
 [dependencies]
 failure = "*"
-strsim = "*"
-itertools = "*"
 lazy_static = "*"
 regex = "1"
 quote = "0.6"
+proc-macro2 = "*"
 
 [dependencies.syn]
 version = "0.15"
-features = ["full", "extra-traits"]
+features = ["full", "extra-traits", "parsing"]
 
 [[bin]]
 name = "puzzle-16"
