--- a/2018/Cargo.toml
+++ b/2018/Cargo.toml
@@ -1,15 +1,20 @@
-[workspace]
+[package]
+name = "advent_of_code"
+version = "0.1.0"
+authors = ["Chris Butler <chrisbutler296@gmail.com>"]
+edition = "2018"
 
-members = [
-    "puzzle-01",
-    "puzzle-02",
-    "puzzle-03",
-    "puzzle-04",
-    "puzzle-05",
-    "puzzle-06",
-    "puzzle-07",
-    # "puzzle-08",
-    "puzzle-09",
-    "puzzle-10",
-    "puzzle-16",
-]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+aoc-runner = "*"
+aoc-runner-derive = "*"
+failure = "*"
+itertools = "*"
+lazy_static = "*"
+regex = "1"
+strsim = "*"
+
+[dependencies.image]
+version = "*"
+features = ["png"]
