--- a/intcode/Cargo.toml
+++ b/intcode/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+vm-logging = []
+# default = ["vm-logging"]
+default = []
+
 [lib]
 name = "intcode"
 path = "src/lib.rs"
@@ -24,3 +29,8 @@ path = "src/runner.rs"
 
 [dependencies]
 smallvec = "1"
+err-derive = "0.2"
+num = "0.2"
+
+[dev-dependencies]
+pretty_assertions = "*"
