Rename crates to `aocYY` for each year
Also ran `cargo update` for good measure

--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "advent_of_code"
+name = "aoc19"
 version = "0.1.0"
 authors = ["Chris Butler <chrisbutler296@gmail.com>"]
 edition = "2018"
+default-run = "aoc19"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
