--- a/2018/Cargo.toml
+++ b/2018/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent_of_code"
+name = "aoc18"
 version = "0.1.0"
 authors = ["Chris Butler <chrisbutler296@gmail.com>"]
 edition = "2018"
