--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -16,6 +16,11 @@ lazy_static = "1"
 regex = "1"
 smallvec = "1"
 rayon = "1"
+core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true}
 
 [profile.release]
 overflow-checks = true
+
+[features]
+default = ["simd"]
+simd = ["core_simd"]
