--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -18,6 +18,7 @@ smallvec = "1"
 rayon = "1"
 core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true}
 image = "0.23"
+rand = "0.8"
 
 [profile.release]
 overflow-checks = true
