--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -27,6 +27,7 @@ core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = tru
 image = "0.23"
 rand = "0.8"
 scan_fmt = "0.2"
+pretty_assertions = "*"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
