--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -23,7 +23,7 @@ rand = "0.8"
 rayon = "1"
 regex = "1"
 scan_fmt = "0.2"
-smallvec = "1"
+smallvec = { version = "1", features = ["const_generics"] }
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
