Let's try rstest!

--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -22,6 +22,7 @@ pretty_assertions = "*"
 rand = "0.8"
 rayon = "1"
 regex = "1"
+rstest = { version= "0.16", default-features = false }
 scan_fmt = "0.2"
 smallvec = { version = "1", features = ["const_generics"] }
 
