--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -26,6 +26,7 @@ rstest = { version= "0.16", default-features = false }
 scan_fmt = "0.2"
 smallvec = { version = "1", features = ["const_generics"] }
 smallstr = { version = "0.3", features = ["std"] }
+ultraviolet = { version = "0.9", features =["int"] }
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
