--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -5,6 +5,14 @@ authors = ["Chris Butler <chrisbutler296@gmail.com>"]
 edition = "2021"
 default-run = "aoc22"
 
+[[bin]]
+name = "aoc22"
+path = "src/main.rs"
+
+[[bin]]
+name = "heightmap"
+path = "src/heightmap.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "aoc22"
@@ -14,6 +22,7 @@ path = "src/lib.rs"
 aoc-runner = "*"
 aoc-runner-derive = "*"
 
+clap = {version = "4", features =["derive"] }
 core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true}
 image = { version = "0.24", default-features = false, features = ["png"] }
 itertools = "0.10"
@@ -24,8 +33,8 @@ rayon = "1"
 regex = "1"
 rstest = { version= "0.16", default-features = false }
 scan_fmt = "0.2"
-smallvec = { version = "1", features = ["const_generics"] }
 smallstr = { version = "0.3", features = ["std"] }
+smallvec = { version = "1", features = ["const_generics"] }
 ultraviolet = { version = "0.9", features =["int"] }
 
 # Enable aggressive optimizations for all dependencies all of the time
