--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -49,6 +49,12 @@ smallstr = { version = "0.3", features = ["std"] }
 smallvec = { version = "1", features = ["const_generics"] }
 ultraviolet = { version = "0.9", features = ["int"] }
 
+[target.'cfg(target_os = "macos")'.dependencies]
+swift-rs = "0.3.0"
+
+[target.'cfg(target_os = "macos")'.build-dependencies]
+swift-rs = { version = "0.3.0", features = ["build"] }
+
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
 opt-level = 2
