--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -24,6 +24,7 @@ aoc-runner-derive = "*"
 
 clap = {version = "4", features =["derive"] }
 core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true}
+derive_more = "0.99"
 either = "1.8.0"
 image = { version = "0.24", default-features = false, features = ["png"] }
 itertools = "0.10"
