--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/main.rs"
 name = "heightmap"
 path = "src/heightmap.rs"
 
+[[bin]]
+name = "render-day22"
+path = "src/render-day22.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "aoc22"
