--- a/intcode/Cargo.toml
+++ b/intcode/Cargo.toml
@@ -3,6 +3,7 @@ name = "intcode"
 version = "0.1.0"
 authors = ["Chris Butler <chrisbutler296@gmail.com>"]
 edition = "2018"
+default-run = "intcode"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
