Day4 but now < 60us
Use u16 instead of usize

--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -29,6 +29,7 @@ itertools = "0.12"
 lazy_static = "1"
 num = "0.4"
 scan_fmt = "0.2"
+smallvec = "1"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
