Use fnv to hash instead of std defaults
std uses nondeterminism when hashing to protect against DDoS, but we do
not care about that here.

--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -30,6 +30,7 @@ lazy_static = "1"
 num = "0.4"
 scan_fmt = "0.2"
 smallvec = "1"
+fnv = "1"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
