--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -34,6 +34,7 @@ fnv = "1"
 image = "0.24"
 ultraviolet = { version = "0.9", features = ["int"] }
 bitmask-enum = "2"
+indicatif = "0.17"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
