Return of the broken feature

--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -14,6 +14,10 @@ path = "src/main.rs"
 name = "aoc23"
 path = "src/lib.rs"
 
+[features]
+default = []
+broken = []
+
 [dependencies]
 aoc-runner = "*"
 aoc-runner-derive = "*"
