--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -39,6 +39,7 @@ image = "0.24"
 ultraviolet = { version = "0.9", features = ["int"] }
 bitmask-enum = "2"
 indicatif = "0.17"
+priority-queue = "1.3"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
