--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -38,7 +38,9 @@ fnv = "1"
 image = "0.24"
 ultraviolet = { version = "0.9", features = ["int"] }
 bitmask-enum = "2"
-indicatif = "0.17"
+indicatif = {version = "0.17", features = ["rayon"]}
+rayon = "1"
+
 priority-queue = "1.3"
 
 # Enable aggressive optimizations for all dependencies all of the time
