--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -40,6 +40,10 @@ ultraviolet = { version = "0.9", features = ["int"] }
 bitmask-enum = "2"
 indicatif = "0.17"
 
+priority-queue = "1.3"
+defaults = "0.2"
+colored = "2.1.0"
+
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
 opt-level = 2
