--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -17,25 +17,26 @@ path = "src/lib.rs"
 [features]
 default = []
 broken = []
+simd = []
 
 [dependencies]
 aoc-runner = "*"
 aoc-runner-derive = "*"
 
 ctor = "0.2"
-env_logger = "0.10"
-log = { version = "0.4", features = ["serde"] }
+env_logger = "0.11"
+log = { version = "0.4", features = ["serde", "kv"] }
 
 pretty_assertions = "*"
-rstest = { version= "0.18", default-features = false }
+rstest = { version = "0.23", default-features = false }
 
-itertools = "0.12"
+itertools = "0.13"
 lazy_static = "1"
 num = "0.4"
 scan_fmt = "0.2"
 smallvec = "1"
 fnv = "1"
-image = "0.24"
+image = "0.25"
 ultraviolet = { version = "0.9", features = ["int"] }
 bitmask-enum = "2"
 indicatif = "0.17"
