--- a/2018/Cargo.toml
+++ b/2018/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aoc-runner = "*"
-aoc-runner-derive = "*"
-failure = "*"
-itertools = "*"
-lazy_static = "*"
+aoc-runner = "0.3"
+aoc-runner-derive = "0.3"
+failure = "0.1"
+itertools = "0.13"
+lazy_static = "1"
 regex = "1"
-strsim = "*"
+strsim = "0.11"
 
 [dependencies.image]
-version = "*"
+version = "0.25"
 features = ["png"]
