--- a/2017/Cargo.toml
+++ b/2017/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/lib.rs"
 aoc-runner = "0.3"
 aoc-runner-derive = "0.3"
 bitmask-enum = "2"
+itertools = "0.13"
 log = "0.4"
 pretty_assertions = "1"
 rstest = "0.23"
