--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -8,8 +8,8 @@ default-run = "aoc19"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aoc-runner = "*"
-aoc-runner-derive = "*"
+aoc-runner = "0.3"
+aoc-runner-derive = "0.3"
 smallvec = "1"
 itertools = "0.13"
 intcode = { path = "../intcode" }
