--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -15,8 +15,8 @@ name = "gif-of"
 path = "src/gif_of.rs"
 
 [dependencies]
-aoc-runner = "*"
-aoc-runner-derive = "*"
+aoc-runner = "0.3"
+aoc-runner-derive = "0.3"
 
 itertools = "0.13"
 lazy_static = "1"
