--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -20,8 +20,8 @@ broken = []
 simd = []
 
 [dependencies]
-aoc-runner = "*"
-aoc-runner-derive = "*"
+aoc-runner = "0.3"
+aoc-runner-derive = "0.3"
 
 ctor = "0.2"
 env_logger = "0.11"
