--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -27,15 +27,15 @@ ctor = "0.2"
 env_logger = "0.11"
 log = { version = "0.4", features = ["serde", "kv"] }
 
-pretty_assertions = "*"
-rstest = { version = "0.23", default-features = false }
-
+bitmask-enum = "2"
+image = "0.24"
 itertools = "0.13"
 num = "0.4"
+pretty_assertions = "*"
+rstest = { version = "0.23", default-features = false }
 scan_fmt = "0.2"
-# image = "0.25"
+smallvec = "1"
 ultraviolet = { version = "0.9", features = ["int"] }
-bitmask-enum = "2"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
