Day10 viz I guess

--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -15,6 +15,10 @@ path = "src/main.rs"
 name = "aoc24"
 path = "src/lib.rs"
 
+[[bin]]
+name = "viz-day10"
+path = "src/viz-day10.rs"
+
 [features]
 default = []
 broken = []
