--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -40,6 +40,7 @@ rstest = { version = "0.23", default-features = false }
 scan_fmt = "0.2"
 smallvec = "1"
 ultraviolet = { version = "0.9", features = ["int"] }
+memchr = "2.7"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
