--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -41,6 +41,8 @@ scan_fmt = "0.2"
 smallvec = "1"
 ultraviolet = { version = "0.9", features = ["int"] }
 memchr = "2.7"
+rayon = "1"
+indicatif = "0.17.9"
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
