--- a/2017/Cargo.toml
+++ b/2017/Cargo.toml
@@ -15,6 +15,7 @@ aoc-runner-derive = "0.3"
 bitmask-enum = "2"
 itertools = "0.13"
 log = "0.4"
+memchr = "2.7"
 pretty_assertions = "1"
 rstest = "0.23"
 ultraviolet = { version = "0.9", features = ["int"] }
