Add 2024 day 12 viz

--- a/2024/Cargo.toml
+++ b/2024/Cargo.toml
@@ -20,6 +20,10 @@ name = "viz-day10"
 path = "src/viz/viz-day10.rs"
 
 [[bin]]
+name = "viz-day12"
+path = "src/viz/viz-day12.rs"
+
+[[bin]]
 name = "viz-day20"
 path = "src/viz/viz-day20.rs"
 
