--- a/2025/Cargo.toml
+++ b/2025/Cargo.toml
@@ -44,6 +44,7 @@ regex = "1"
 scan_fmt = "0.2"
 smallvec = "1"
 ultraviolet = { version = "0.10", features = ["int"] }
+bytemuck = { version = "1.24.0", features = ["derive"] }
 
 # Enable aggressive optimizations for all dependencies all of the time
 [profile.dev.package."*"]
